# todo-hackathon

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  vercel.json  verification.sh
.claude/: settings.local.json
.specify/memory/: constitution.md
api/: index.py  main.py  requirements.txt
backend_workaround/: main.py  main_fixed.py  requirements.txt  requirements_sqlite.txt
backend_workaround/core/: config.py
backend_workaround/database/: session.py
backend_workaround/models/: task.py
backend_workaround/repositories/: task_repository.py
backend_workaround/services/: task_service.py
history/prompts/constitution/: 0001-update-project-constitution.constitution.prompt.md
history/prompts/general/: 1-minimalist-backend-implementation.red.prompt.md  2-secure-database-connection.red.prompt.md  3-fix-frontend-backend-connectivity.red.prompt.md
history/prompts/todo-console-app/: 0002-create-todo-console-app-spec.spec.prompt.md  0003-create-todo-console-app-plan.plan.prompt.md  0004-create-todo-console-app-tasks.tasks.prompt.md
specs/: phase-1-phr.md
specs/phase-2/: plan.md  spec.md  tasks.md
specs/todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo_hackathon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
web-app/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web-app/src/app/: layout.tsx  page.tsx
web-app/src/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
web-app/src/services/: taskService.ts
web-app/src/types/: task.ts
(+1 files in other folders)
